add jenkins file
