# Customers/docs/swagger.json
@@ -11,7 +11,7 @@
         "license": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:8091",
     "basePath": "/",
     "paths": {
         "/customers": {
@@ -224,13 +224,7 @@
                 "address_2": {
                     "type": "string"
                 },
-                "address_id": {
-                    "type": "string"
-                },
                 "city": {
-                    "type": "string"
-                },
-                "company": {
                     "type": "string"
                 },
                 "country_id": {
@@ -257,9 +251,6 @@
                     }
                 },
                 "approved": {
-                    "type": "string"
-                },
-                "cart": {
                     "type": "string"
                 },
                 "confirm": {
@@ -292,20 +283,14 @@
                 "password": {
                     "type": "string"
                 },
-                "reward_total": {
-                    "type": "integer"
-                },
                 "safe": {
                     "type": "string"
                 },
-                "status": {
+                "statuss": {
                     "type": "string"
                 },
                 "telephone": {
                     "type": "string"
-                },
-                "user_balance": {
-                    "type": "number"
                 }
             }
         }
